--- a/css/index.scss
+++ b/css/index.scss
@@ -818,6 +818,14 @@ body {
 
 /*--------------- Small PC monitors ---------------*/
 @media(min-width: 1080px) {
+    body #main img {
+        margin-left: 10rem;
+        max-width: 100%;
+        margin-top: 0rem;
+        margin-right: 3rem;
+        margin-bottom: 3rem;
+    }
+
     body {
         width: 100%;
 
@@ -849,13 +857,12 @@ body {
     }
 
     body #main img {
-        margin-left: 35rem;
+        margin-left: 10rem;
         max-width: 100%;
         margin-top: 0rem;
         margin-right: 3rem;
         margin-bottom: 3rem;
     }
-
     body #about {
         height: 71rem;
     }
