--- a/css/index.scss
+++ b/css/index.scss
@@ -739,7 +739,13 @@ body {
 }
 
 @media(min-width: 1024px) and (max-width: 1280px) {
-
+    body #main img {
+        margin-left: 10rem;
+        max-width: 100%;
+        margin-top: 0rem;
+        margin-right: 3rem;
+        margin-bottom: 3rem;
+    }
     body {
 
         h2 {
