--- a/css/index.scss
+++ b/css/index.scss
@@ -228,6 +228,13 @@ body {
 // Extra large devices (large desktops, 1200px and up)
 @media all and (max-width: 1281px) {
     body #main img {
+        margin-left: 10rem;
+        max-width: 100%;
+        margin-top: 0rem;
+        margin-right: 3rem;
+        margin-bottom: 3rem;
+    }
+    body #main img {
         margin-left: 11rem;
     }
 }
