--- a/css/index.scss
+++ b/css/index.scss
@@ -228,6 +228,7 @@ body {
 // Extra large devices (large desktops, 1200px and up)
 @media all and (max-width: 1281px) {
     body #main img {
+        float: left;
         margin-left: 10rem;
         max-width: 100%;
         margin-top: 0rem;
@@ -747,6 +748,7 @@ body {
 
 @media(min-width: 1024px) and (max-width: 1280px) {
     body #main img {
+        float: left;
         margin-left: 10rem;
         max-width: 100%;
         margin-top: 0rem;
