--- a/css/index.css
+++ b/css/index.css
@@ -196,6 +196,7 @@ body #footer {
 
 @media all and (max-width: 1281px) {
   body #main img {
+    float: left;
     margin-left: 10rem;
     max-width: 100%;
     margin-top: 0rem;
@@ -549,6 +550,7 @@ body #footer {
 
 @media (min-width: 1024px) and (max-width: 1280px) {
   body #main img {
+    float: left;
     margin-left: 10rem;
     max-width: 100%;
     margin-top: 0rem;
