--- a/css/index.scss
+++ b/css/index.scss
@@ -224,6 +224,16 @@ body {
 
 
 
+@media (max-width: 1920px) and (min-width: 1281px){
+body #main img {
+    float: left;
+    margin-left: 10rem;
+    max-width: 100%;
+    margin-top: 0rem;
+    margin-right: 3rem;
+    margin-bottom: 3rem;
+}
+}
 
 // Extra large devices (large desktops, 1200px and up)
 @media all and (max-width: 1281px) {
